# licenseToolServer

./: .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  requirements.txt
.agents/commands/: conductor-archive.md  conductor-block.md  conductor-export.md  conductor-implement.md  conductor-newtrack.md  conductor-refresh.md  conductor-revert.md  conductor-revise.md  conductor-setup.md  conductor-skip.md  conductor-status.md  conductor-validate.md
.agents/skills/conductor/: SKILL.md
backend/: .env.example  conftest.py
backend/apps/licenses/: admin.py  admin_views.py  apps.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/config/: celery.py  settings.py  settings_dev.py  urls.py  wsgi.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/code_styleguides/: git-commits.md  javascript-react.md  python.md
conductor/tracks/mvp_20260101/: implement_state.json  metadata.json  plan.md  spec.md
docs/: DEPLOYMENT.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  licenses.ts
frontend/src/components/: Layout.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Dashboard.tsx  Devices.tsx  LicenseDetail.tsx  Licenses.tsx  Login.tsx
nginx/: Dockerfile  nginx.conf  nginx.ssl.conf
sdk/: README.md  pyproject.toml
sdk/license_client/: __init__.py  client.py  exceptions.py  fingerprint.py  signature.py  tests.py
(+5 files in other folders)
